# swllm.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  OPTIMIZATION_GUIDE.md  README.md  README_zh_CN.md  swllm
.github/workflows/: ci.yml
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  llm  test_gguf
src/: cuda_kernels.cu  gguf.h  hf_loader.h  main.cpp  model.h  safetensors.h  sampler.h  server.h  tensor.h  tokenizer.h
tests/: test_gguf.cpp  test_gpu.cu
